Slider layout toggle to switch between fixed and non fixed on mobile versions

--- a/packages/robust/dynamic-forms/public/website/css/responsive.css
+++ b/packages/robust/dynamic-forms/public/website/css/responsive.css
@@ -46,4 +46,8 @@
     .site-navbar .navbar-header .navbar-brand-logo {
         height: 30px;
     }
+    
+    .layout-block {
+        display: block;
+    }
 }
